@@ -1,0 +1,6 @@
+  object HelloWorld {
+    def main(args: Array[String]) {
+      println("Hello, world! " + args.toList)
+    }
+  }
+  HelloWorld.main(args)
